change in template example

--- a/app/templateExample/complex-select.component.html
+++ b/app/templateExample/complex-select.component.html
@@ -2,6 +2,6 @@
 <select>
     <!--<option></option>-->
     <option *ngFor="let item of items">
-        <template [ngTemplateOutlet]="innerTemplate" [ngOutletContext]="{item: item}"></template>
+        <div [ngTemplateOutlet]="innerTemplate" [ngOutletContext]="{item: item}"></div>
     </option>
 </select>
