--- a/app/structuralDirective/structuralDirective.component.html
+++ b/app/structuralDirective/structuralDirective.component.html
@@ -9,11 +9,11 @@
     <div *ngIf="!ifCondition">
         ifCondition is equal false
     </div>
-    <template [ngIf]="ifCondition">
+    <ng-template [ngIf]="ifCondition">
         <div>
             ifCondition is equal true
         </div>
-    </template>
+    </ng-template>
 </div>
 
 <div class='example-area'>
