--- a/app/templateExample/templateExample.component.html
+++ b/app/templateExample/templateExample.component.html
@@ -1,3 +1,3 @@
 <my-complex-select [items]="items">
-    <template let-item="item"><option>value: {{item}}</option></template>
+    <ng-template let-item="item"><option>value: {{item}}</option></ng-template>
 </my-complex-select>
